--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/database.yml
+/config/chexpire.yml
 /public/packs
 /public/packs-test
 /node_modules
