--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
 
 before_install:
   - cp config/database.example.yml config/database.yml
+  - cp config/chexpire.test.yml config/chexpire.yml
 
 install:
   - bundle install
