--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "rails-ujs": "^5.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
