--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -29,6 +29,13 @@ test:
   database: chexpire_test
   url: <%= ENV['DATABASE_URL'] %>
 
+
+staging:
+  <<: *default
+  database: chexpire_staging
+  username: chexpire
+  password: <%= ENV['CHEXPIRE_DATABASE_PASSWORD'] %>
+
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
