Don't use shared credentials, back to old secrets ignored files
Helps for open-source and multiple instances projects.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/credentials.yml.enc
+/config/secrets.yml
 /config/database.yml
 /config/chexpire.yml
 /public/packs
