--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 install:
   - bundle install
   - yarn install
-  - rails db:setup
+  - rails db:create db:migrate
 
 script:
   - bundle exec rubocop
