Check processor with task to update/sync dates

--- a/config/chexpire.test.yml
+++ b/config/chexpire.test.yml
@@ -4,3 +4,7 @@ test:
   notifier:
     interval: 0.00
     failure_days: 3
+  checks:
+    interval: 0.00
+    long_term: 60
+    long_term_frequency: 10
