--- a/config/chexpire.example.yml
+++ b/config/chexpire.example.yml
@@ -3,6 +3,10 @@ default: &default
   notifier:
     interval: 0.00
     failure_days: 3
+  checks:
+    interval: 0.5
+    long_term: 60
+    long_term_frequency: 10
 
 development:
   <<: *default
