Dynamic mailer configuration

--- a/config/chexpire.example.yml
+++ b/config/chexpire.example.yml
@@ -12,5 +12,9 @@ development:
   <<: *default
   host: "chexpire.local"
 
+production:
+  action_mailer_config:
+    delivery_method: :sendmail
+
 # test configuration included in file used by CI services
 <%= IO.read Rails.root.join("config", "chexpire.test.yml") %>
