Clarify command to run to generate secrets

--- a/config/secrets.example.yml
+++ b/config/secrets.example.yml
@@ -1,5 +1,5 @@
 development:
-  secret_key_base: "run rails secret and paste the result here"
+  secret_key_base: "run `bundle exec rails secret` and paste the result here"
 
 test:
-  secret_key_base: "run rails secret and paste the result here"
+  secret_key_base: "run `bundle exec rails secret` and paste the result here"
