Add delivery_method config for staging environment

--- a/config/chexpire.example.yml
+++ b/config/chexpire.example.yml
@@ -16,5 +16,9 @@ production:
   action_mailer_config:
     delivery_method: :sendmail
 
+staging:
+  action_mailer_config:
+    delivery_method: :sendmail
+
 # test configuration included in file used by CI services
 <%= IO.read Rails.root.join("config", "chexpire.test.yml") %>
