--- a/config/chexpire.example.yml
+++ b/config/chexpire.example.yml
@@ -3,7 +3,7 @@ default: &default
   notifier:
     interval: 0.00
     failure_days: 3
-  checks:
+  checks_domain:
     interval: 0.5
     long_term: 60
     long_term_frequency: 10
