--- a/config/chexpire.example.yml
+++ b/config/chexpire.example.yml
@@ -7,6 +7,9 @@ default: &default
     interval: 0.5
     long_term: 60
     long_term_frequency: 10
+  checks_ssl:
+    check_http_path: ""
+    check_http_args: ""
 
 development:
   <<: *default
