--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "exports-loader": "^0.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
-    "rails-ujs": "^5.2.0"
+    "rails-ujs": "^5.2.0",
+    "turbolinks": "^5.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
