--- a/config/chexpire.test.yml
+++ b/config/chexpire.test.yml
@@ -9,5 +9,5 @@ test:
     long_term: 60
     long_term_frequency: 10
   checks_ssl:
-    check_http_path: ""
-    check_http_args: ""
+    check_http_path:
+    check_http_args:
