--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,11 @@ addons:
 
 before_install:
   - cp config/database.example.yml config/database.yml
-  - cp config/chexpire.test.yml config/chexpire.yml
   - cp config/secrets.example.yml config/secrets.yml
+
+  # Test configuration loaded from chexpire.defaults.yml,
+  # but chexpire.yml file is required
+  - touch config/chexpire.yml
 
 install:
   - bundle install
