Increase max line length to 120

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,6 +44,8 @@ Layout/EndAlignment:
 
 Metrics/LineLength:
   Max: 100
+  IgnoredPatterns:
+    - '# Copyright'
 
 Style/BlockDelimiters:
   EnforcedStyle: semantic
