upgrade to webpacker 4

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ yarn-debug.log*
 
 # OS file
 .DS_Store
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
