--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@
 language:
   - ruby
 rvm:
-  - 2.5
+  ### Zeitwerk is not fully compatible with 2.5
+  ### cf. https://github.com/Evolix/chexpire/pull/104
+  # - 2.5
   - 2.6
 
 cache:
