--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^4.0.0-rc.8",
+    "@rails/webpacker": "^4.0.0",
     "bootstrap": "^4.1.1",
     "exports-loader": "^0.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
-    "turbolinks": "^5.2.0"
+    "webpack-cli": "^3.2.3"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
