--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^4.0.0",
-    "bootstrap": "^4.1.1",
+    "@rails/webpacker": "^4.0.7",
+    "bootstrap": "^4.3.1",
     "exports-loader": "^0.7.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "webpack-cli": "^3.2.3"
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
   },
+  "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.2.1"
-  },
-  "version": "0.1.0"
+    "webpack-dev-server": "^3.8.0"
+  }
 }
