--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ sudo: required # required with chrome addon
 addons:
   chrome: stable
 
+services:
+  - mysql
+
 before_install:
   - cp config/database.example.yml config/database.yml
   - cp config/secrets.example.yml config/secrets.yml
