--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ services:
   - mysql
 
 before_install:
-  - cp config/database.example.yml config/database.yml
+  - mysql -e 'CREATE DATABASE chexpire_test;'
+  - cp config/database.travis.yml config/database.yml
   - cp config/secrets.example.yml config/secrets.yml
 
   # Test configuration loaded from chexpire.defaults.yml,
