--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ install:
   - bundle install
   - yarn install
   - rails db:create db:migrate
+  - bundle exec rails webpacker:compile
 
 script:
   - bundle exec rubocop
