--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "dependencies": {
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "4.3.1",
     "exports-loader": "^0.7.0",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
