--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "dependencies": {
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bootstrap": "4.3.1",
     "exports-loader": "^0.7.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "postcss-preset-env": "^6.7.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
