--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ services:
   - mysql
 
 before_install:
+  - gem update --system
+  - gem install bundler
   - mysql -e 'CREATE DATABASE chexpire_test;'
   - cp config/database.travis.yml config/database.yml
   - cp config/secrets.example.yml config/secrets.yml
