Travis : use Ubuntu 18

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # Copyright (C) 2018 Colin Darie <colin@darie.eu>, 2018 Evolix <info@evolix.fr>
 # License: GNU AGPL-3+ (see full text in LICENSE file)
 
+dist: bionic
+
 language:
   - ruby
 rvm:
